// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusTracker should display the first step with the active class 1`] = `
.c0 {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  position: relative;
  z-index: 1;
}

.done.c2 > .status-text,
.active.fUNtYE > .status-text,
.error.fUNtYE > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.fUNtYE > .status-text {
  display: inherit;
  font-weight: bold;
}

.active.c2:after,
.done.fUNtYE:after,
.error.fUNtYE:after {
  background-color: #00a0d2;
}

.c4 {
  color: #919191;
  list-style-type: none;
  position: relative;
  text-align: center;
  width: 25%;
}

.c4 > .status-text {
  display: none;
}

.done.c2 > .status-text,
.active.c4 > .status-text,
.error.c4 > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.c4 > .status-text {
  display: inherit;
  font-weight: bold;
}

.c4.c4:before {
  content: '';
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px auto;
  text-align: center;
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.error.c4.c4:before,
.active.c4.c4:before {
  height: 30px;
  line-height: 30px;
  margin: 0 auto 10px auto;
  width: 30px;
}

.done.c4.c4:before,
.active.c4.c4:before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c4.c4:before {
  font-size: 14px;
}

.active.c4.c4:before {
  font-size: 22px;
}

.error.c4.c4:before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c4:after {
  background-color: #c5c5c5;
  content: '';
  height: 4px;
  left: -50%;
  position: absolute;
  top: 17px;
  width: 100%;
  z-index: -1;
}

.active.c2:after,
.done.c4:after,
.error.c4:after {
  background-color: #00a0d2;
}

.c4:first-child:after {
  content: none;
}

.c3 {
  color: #919191;
  list-style-type: none;
  position: relative;
  text-align: center;
  width: 25%;
}

.c3 > .status-text {
  display: none;
}

.done.c2 > .status-text,
.active.c3 > .status-text,
.error.c3 > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.c3 > .status-text {
  display: inherit;
  font-weight: bold;
}

.c3.c3:before {
  content: '';
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px auto;
  text-align: center;
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.error.c3.c3:before,
.active.c3.c3:before {
  height: 30px;
  line-height: 30px;
  margin: 0 auto 10px auto;
  width: 30px;
}

.done.c3.c3:before,
.active.c3.c3:before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c3.c3:before {
  font-size: 14px;
}

.active.c3.c3:before {
  font-size: 22px;
}

.error.c3.c3:before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c3:after {
  background-color: #c5c5c5;
  content: '';
  height: 4px;
  left: -50%;
  position: absolute;
  top: 17px;
  width: 100%;
  z-index: -1;
}

.active.c2:after,
.done.c3:after,
.error.c3:after {
  background-color: #00a0d2;
}

.c3:first-child:after {
  content: none;
}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {
  .c4 > .status-text {
    display: inherit;
  }
}

@media (min-width:768px) {
  .done.c4.c4:before {
    font-size: 22px;
  }
}

@media (min-width:768px) {
  .c4 .status-text {
    display: inherit;
  }

  .c4.active:before,
  .c4.done:before {
    height: 30px;
    line-height: 30px;
    margin: 0 auto 10px auto;
    width: 30px;
  }
}

@media (min-width:768px) {
  .c3 > .status-text {
    display: inherit;
  }
}

@media (min-width:768px) {
  .done.c3.c3:before {
    font-size: 22px;
  }
}

@media (min-width:768px) {
  .c3 .status-text {
    display: inherit;
  }

  .c3.active:before,
  .c3.done:before {
    height: 30px;
    line-height: 30px;
    margin: 0 auto 10px auto;
    width: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 c3 active"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c2 c4"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c2 c4"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c2 c4"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;

exports[`StatusTracker should display the last step with the active class 1`] = `
.c0 {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  position: relative;
  z-index: 1;
}

.done.c2 > .status-text,
.active.fUNtYE > .status-text,
.error.fUNtYE > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.fUNtYE > .status-text {
  display: inherit;
  font-weight: bold;
}

.active.c2:after,
.done.fUNtYE:after,
.error.fUNtYE:after {
  background-color: #00a0d2;
}

.c3 {
  color: #919191;
  list-style-type: none;
  position: relative;
  text-align: center;
  width: 25%;
}

.c3 > .status-text {
  display: none;
}

.done.c2 > .status-text,
.active.c3 > .status-text,
.error.c3 > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.c3 > .status-text {
  display: inherit;
  font-weight: bold;
}

.c3.c3:before {
  content: '';
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px auto;
  text-align: center;
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.error.c3.c3:before,
.active.c3.c3:before {
  height: 30px;
  line-height: 30px;
  margin: 0 auto 10px auto;
  width: 30px;
}

.done.c3.c3:before,
.active.c3.c3:before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c3.c3:before {
  font-size: 14px;
}

.active.c3.c3:before {
  font-size: 22px;
}

.error.c3.c3:before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c3:after {
  background-color: #c5c5c5;
  content: '';
  height: 4px;
  left: -50%;
  position: absolute;
  top: 17px;
  width: 100%;
  z-index: -1;
}

.active.c2:after,
.done.c3:after,
.error.c3:after {
  background-color: #00a0d2;
}

.c3:first-child:after {
  content: none;
}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {
  .c3 > .status-text {
    display: inherit;
  }
}

@media (min-width:768px) {
  .done.c3.c3:before {
    font-size: 22px;
  }
}

@media (min-width:768px) {
  .c3 .status-text {
    display: inherit;
  }

  .c3.active:before,
  .c3.done:before {
    height: 30px;
    line-height: 30px;
    margin: 0 auto 10px auto;
    width: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c2 c3 active"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;

exports[`StatusTracker should display the last step with the error class when isErrorState is true 1`] = `
.c0 {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  position: relative;
  z-index: 1;
}

.done.c2 > .status-text,
.active.fUNtYE > .status-text,
.error.fUNtYE > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.fUNtYE > .status-text {
  display: inherit;
  font-weight: bold;
}

.active.c2:after,
.done.fUNtYE:after,
.error.fUNtYE:after {
  background-color: #00a0d2;
}

.c3 {
  color: #919191;
  list-style-type: none;
  position: relative;
  text-align: center;
  width: 25%;
}

.c3 > .status-text {
  display: none;
}

.done.c2 > .status-text,
.active.c3 > .status-text,
.error.c3 > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.c3 > .status-text {
  display: inherit;
  font-weight: bold;
}

.c3.c3:before {
  content: '';
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px auto;
  text-align: center;
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.error.c3.c3:before,
.active.c3.c3:before {
  height: 30px;
  line-height: 30px;
  margin: 0 auto 10px auto;
  width: 30px;
}

.done.c3.c3:before,
.active.c3.c3:before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c3.c3:before {
  font-size: 14px;
}

.active.c3.c3:before {
  font-size: 22px;
}

.error.c3.c3:before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c3:after {
  background-color: #c5c5c5;
  content: '';
  height: 4px;
  left: -50%;
  position: absolute;
  top: 17px;
  width: 100%;
  z-index: -1;
}

.active.c2:after,
.done.c3:after,
.error.c3:after {
  background-color: #00a0d2;
}

.c3:first-child:after {
  content: none;
}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {
  .c3 > .status-text {
    display: inherit;
  }
}

@media (min-width:768px) {
  .done.c3.c3:before {
    font-size: 22px;
  }
}

@media (min-width:768px) {
  .c3 .status-text {
    display: inherit;
  }

  .c3.active:before,
  .c3.done:before {
    height: 30px;
    line-height: 30px;
    margin: 0 auto 10px auto;
    width: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c2 c3 error"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;

exports[`StatusTracker should display the third step with the active class 1`] = `
.c0 {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 0;
  padding: 0;
  position: relative;
  z-index: 1;
}

.done.c2 > .status-text,
.active.fUNtYE > .status-text,
.error.fUNtYE > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.fUNtYE > .status-text {
  display: inherit;
  font-weight: bold;
}

.active.c2:after,
.done.fUNtYE:after,
.error.fUNtYE:after {
  background-color: #00a0d2;
}

.c4 {
  color: #919191;
  list-style-type: none;
  position: relative;
  text-align: center;
  width: 25%;
}

.c4 > .status-text {
  display: none;
}

.done.c2 > .status-text,
.active.c4 > .status-text,
.error.c4 > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.c4 > .status-text {
  display: inherit;
  font-weight: bold;
}

.c4.c4:before {
  content: '';
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px auto;
  text-align: center;
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.error.c4.c4:before,
.active.c4.c4:before {
  height: 30px;
  line-height: 30px;
  margin: 0 auto 10px auto;
  width: 30px;
}

.done.c4.c4:before,
.active.c4.c4:before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c4.c4:before {
  font-size: 14px;
}

.active.c4.c4:before {
  font-size: 22px;
}

.error.c4.c4:before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c4:after {
  background-color: #c5c5c5;
  content: '';
  height: 4px;
  left: -50%;
  position: absolute;
  top: 17px;
  width: 100%;
  z-index: -1;
}

.active.c2:after,
.done.c4:after,
.error.c4:after {
  background-color: #00a0d2;
}

.c4:first-child:after {
  content: none;
}

.c3 {
  color: #919191;
  list-style-type: none;
  position: relative;
  text-align: center;
  width: 25%;
}

.c3 > .status-text {
  display: none;
}

.done.c2 > .status-text,
.active.c3 > .status-text,
.error.c3 > .status-text {
  color: #00a0d2;
}

.active.c2 > .status-text,
.error.c3 > .status-text {
  display: inherit;
  font-weight: bold;
}

.c3.c3:before {
  content: '';
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  background-color: white;
  border: 3px solid #c5c5c5;
  border-radius: 50%;
  font-weight: bold;
  height: 20px;
  line-height: 20px;
  margin: 5px auto 15px auto;
  text-align: center;
  width: 20px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.error.c3.c3:before,
.active.c3.c3:before {
  height: 30px;
  line-height: 30px;
  margin: 0 auto 10px auto;
  width: 30px;
}

.done.c3.c3:before,
.active.c3.c3:before {
  border-color: #00a0d2;
  color: #00a0d2;
}

.done.c3.c3:before {
  font-size: 14px;
}

.active.c3.c3:before {
  font-size: 22px;
}

.error.c3.c3:before {
  border-color: #cc0000;
  color: #cc0000;
  font-size: 18px;
}

.c3:after {
  background-color: #c5c5c5;
  content: '';
  height: 4px;
  left: -50%;
  position: absolute;
  top: 17px;
  width: 100%;
  z-index: -1;
}

.active.c2:after,
.done.c3:after,
.error.c3:after {
  background-color: #00a0d2;
}

.c3:first-child:after {
  content: none;
}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {
  .c4 > .status-text {
    display: inherit;
  }
}

@media (min-width:768px) {
  .done.c4.c4:before {
    font-size: 22px;
  }
}

@media (min-width:768px) {
  .c4 .status-text {
    display: inherit;
  }

  .c4.active:before,
  .c4.done:before {
    height: 30px;
    line-height: 30px;
    margin: 0 auto 10px auto;
    width: 30px;
  }
}

@media (min-width:768px) {
  .c3 > .status-text {
    display: inherit;
  }
}

@media (min-width:768px) {
  .done.c3.c3:before {
    font-size: 22px;
  }
}

@media (min-width:768px) {
  .c3 .status-text {
    display: inherit;
  }

  .c3.active:before,
  .c3.done:before {
    height: 30px;
    line-height: 30px;
    margin: 0 auto 10px auto;
    width: 30px;
  }
}

<div>
  <input
    type="hidden"
  />
  <div
    aria-hidden="true"
    style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
  >
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-ok"
    />
    <input
      type="hidden"
    />
    <i
      aria-hidden="true"
      class="c0 bds-icon bds-remove"
    />
  </div>
  <ol
    class="c1"
  >
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 1
      </span>
    </li>
    <li
      class="c2 c3 done"
    >
      <span
        class="status-text"
      >
        step 2
      </span>
    </li>
    <li
      class="c2 c3 active"
    >
      <span
        class="status-text"
      >
        step 3
      </span>
    </li>
    <li
      class="c2 c4"
    >
      <span
        class="status-text"
      >
        step 4
      </span>
    </li>
  </ol>
</div>
`;
